# perf

./: .gitignore  Cargo.toml  README.md  bench.sh  requests.txt
.github/workflows/: bench.yml  test.yml
preset/: next.json  release.json
reports/: result-03052022-084929.md  result-09032022-125844.md  result-11092021-081115.md  result-11092021-092148.md  result-11092021-134236.md
results/: result-03052022-084929.json  result-09032022-125844.json  result-11092021-081115.json  result-11092021-092148.json  result-11092021-134236.json
src/: args.rs  bencher.rs  macros.rs  main.rs  updater.rs  util.rs
