[package]
edition = "2018"
name = "skyreport"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
octocrab = "0.15.4"
tokio = { version = "1.17.0", features = ["full"] }
